--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,7 @@ body {
   justify-content: center;
 }
 
+
 .ScoreContainer {
   background-color: lightskyblue;
   border-radius: 20px;
@@ -57,6 +58,9 @@ body {
   align-content: flex-start;
   align-items: stretch;
 }
+.CategorieChoose > div {
+  margin: 2%;
+}
 
 .box{
   background-color: beige;
@@ -67,7 +71,9 @@ body {
   box-shadow: 5px 2px 7px 0px;
   flex: 1 0 33%; 
 }
-
+.box:hover{
+  transform: scale(1.1); 
+}
 .InnerText {
   position: relative;
   color:whitesmoke;
