--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,7 @@ body {
 /*---------------------------------------*/
 /*Navbar*/
 .siteTitle {
-background-size: 40px 30px;
+background-size: 60px 50px;
 width: 50px;
 }
 .nav {
@@ -19,9 +19,10 @@ width: 50px;
   gap: 2rem;
   padding: 0 1rem;
   align-items: stretch;
+  height: 50px;
 }
 .nav ul {
-  padding: 0;
+  padding: 12px;
   margin: 0;
   list-style: none;
   gap: 1rem;
@@ -36,10 +37,10 @@ width: 50px;
   padding: .25rem;
 }
 .nav li:active {
-  background-color: grey;
+  background-color: #aab369;
 }
 .nav li:hover {
-  background-color: grey;
+  background-color: #aab369;
 }
  /*end Navbar*/ 
 /*---------------------------------------*/
@@ -163,16 +164,15 @@ width: 50px;
    height:40px;   /* Height of the footer */
    background:#1e4075;
    opacity: 0.98; 
+   
 }
 .Footer ul {
+  padding: 12px;
   display: flex;
   list-style: none;
   justify-content: space-evenly;
-  align-content: center;
-  font-size: 14px;
-  
+  font-size: 12px;
 }
-
 .FooterText {
   text-decoration: none;
   color: white;
