--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -226,15 +226,13 @@ width: 50px;
 .SignupContainer{
   display: flex;
   flex-direction: column;
+  padding: 10px;
   background-color: #1e4075;
   font-size: 14px;
   height: 220px;
   font-family: monospace;
   border-radius: 20px;
   box-shadow: 1px 2px 10px 0px;
-}
-.SubmitButton{
- 
 }
 .SubmitContainer{
   display: flex;
